tests/fail/zero_len.stderr
error: number would be zero for non-zero type
 --> tests/fail/zero_len.rs:9:33
  |
9 |     let _wave = sine_wave!(len: 0);
  |                                 ^
